SemPress: Fixed menu icon spacing in rtl. Other responsiveness issues fixed in regards to: #1724. Cleaned up style.css.

--- a/rtl.css
+++ b/rtl.css
@@ -29,14 +29,14 @@ body {
 	overflow:hidden;
 }
 .main-navigation{
-  float: right;
-  margin: 0 auto 1em;
+	float: right;
+	margin: 0 auto 1em;
 }
 .main-navigation ul {
-  padding-right: 0;
+	padding-right: 0;
 }
 .main-navigation li {
-  float: right;
+	float: right;
 }
 .main-navigation a,
 .main-navigation a:visited {
@@ -47,23 +47,39 @@ body {
 	color: #777;
 }
 .main-navigation ul ul {
-  box-shadow: 0 3px 3px rgba(0,0,0,0.2);
-  -moz-box-shadow: 0 3px 3px rgba(0,0,0,0.2);
-  -webkit-box-shadow: 0 3px 3px rgba(0,0,0,0.2);
-  float: right;
-  right: 0;
-  left: auto;
+	box-shadow: 0 3px 3px rgba(0,0,0,0.2);
+	-moz-box-shadow: 0 3px 3px rgba(0,0,0,0.2);
+	-webkit-box-shadow: 0 3px 3px rgba(0,0,0,0.2);
+	float: right;
+	right: 0;
+	left: auto;
 }
 .main-navigation ul ul ul {
-  right: 100%;
-  left: auto;
+	right: 100%;
+	left: auto;
+}
+/* Small menu */
+.menu-toggle {
+	cursor: pointer;
+	font-size: 17px;
+	color:#fff;
+	font-weight:normal;
+	text-shadow: none;
+	clip: inherit;
+}
+.menu-toggle:before {
+	font-family: "genericons";
+	content: '\f419';
+	margin-left: 10px;
+	font-size: 17px;
+	vertical-align:top;
 }
 #content nav .nav-previous {
-  float: right;
+	float: right;
 }
 #content nav .nav-next {
-  float: left;
-  text-align: left;
+	float: left;
+	text-align: left;
 }
 /* Custom Post Types */
 .format-aside:before,
@@ -99,10 +115,172 @@ body {
 }
 
 
+/* =Responsive
+-------------------------------------------------------------- */
+
+/* Tablet Portrait size to standard 960 (devices and browsers) */
+@media only screen and (max-width: 959px) {
+#page {
+	max-width: 650px;
+	margin: 0px auto;
+}
+#primary {
+	float: none;
+	margin: 0;
+	width: 100%;
+	clear:both;
+}
+#content {
+	margin: 0;
+	width:100%;
+}
+#secondary {
+	float:none;
+	clear:both;
+	overflow: hidden;
+	width: 100%;
+	padding-top: 50px;
+	margin-top: 50px;
+	border-top: 1px solid #fff;
+	-moz-box-shadow: #ccc 0 -1px 0 0;
+	-webkit-box-shadow: #ccc 0 -1px 0 0;
+	box-shadow: #ccc 0 -1px 0 0;
+}
+#secondary .widget, #secondary .widget-area {
+	overflow: hidden;
+	width:100%;
+}
+#secondary #s{
+	margin:0 auto;
+	display:block;
+}
+.post:before {
+	content: none;
+}
+.entry-content .avatar {
+	display: none;
+}
+}
+
 /* Mobile Landscape Size to Tablet Portrait (devices and browsers) */
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 767px) {
 #page{
 	position:inherit;
-	padding:0 90px;
+	padding:0 25px;
+}
+.site-title{
+	line-height:1.4;
+}
+.main-small-navigation{
+	position: absolute;
+	top: 0px;
+	left: 0;
+	z-index: 1;
+	border: none;
+	border-radius: 0;
+	display: block;
+	clear: both;
+	width: 100%;
+	padding: 0;
+	margin: 0;
+	background: #464646;
+	text-indent:25px;
+}
+.admin-bar .main-small-navigation, .demo-site .main-small-navigation{
+	position: absolute;
+	top: 40px;
+	left: 0;
+	z-index: 1;
+	border: none;
+	border-radius: 0;
+	display: block;
+	clear: both;
+	width: 100%;
+	padding: 0;
+	margin: 0;
+	background: #464646;
+	text-indent:25px;
+}
+.admin-bar .main-small-navigation{
+	top:27px;
+}
+iframe, object, embed {
+	width: auto;
+	height: auto;
+	max-width: 100%;
+}
+table {
+	width: auto;
+	max-width: 100%;
+	overflow: scroll;
+}
+article.post,
+article.page,
+footer.entry-meta {
+	border: none;
+	-moz-box-shadow: none;
+	-webkit-box-shadow: none;
+	box-shadow: none;
+	margin: 0;
+	padding: 0;
+	background-color: transparent;
+}
+.entry-thumbnail img{margin:14px 0;}
+.entry-title,
+.entry-content,
+.entry-summary{
+	margin: 0;
+	padding: 0;
+}
+.entry-meta{
+	margin: 10px 0;
+	padding: 0;
+}
+/* Custom Post Types */
+.format-aside:before,
+.format-video:before,
+.format-audio:before,
+.format-image:before,
+.format-gallery:before,
+.format-link:before,
+.format-quote:before,
+.post.format-standard.sticky:before,
+.entry-content .avatar {
+	display: none;
+}
+}
+
+/* Mobile Landscape Size to Tablet Portrait (devices and browsers) */
+@media only screen and (max-width: 479px) {
+.site-title a {
+	font-size: .5em;
+}
+.site-description {
+	font-size: 1.3em;
+}
+.entry-title, .entry-title a {
+	font-size: 30px;
+	margin: 0;
+}
+}
+
+/* print styles */
+@media print {
+article.page,
+article.post,
+article.attachment,
+img {
+	-moz-box-shadow: none;
+	-webkit-box-shadow: none;
+	box-shadow: none;
+	border:0;
+}
+.main-navigation a,
+.main-navigation a:visited,
+.site-description,
+.site-title a,
+.site-info a {
+	text-shadow:none;
+	color:#000;
 }
 }
