--- a/style.css
+++ b/style.css
@@ -23,15 +23,14 @@ and Blueprint http://www.blueprintcss.org/
  * The font was graciously generated by Font Squirrel (http://www.fontsquirrel.com). We love those guys.
  */
 @font-face {
-    font-family: 'Genericons';
-    src: url('font/genericons-regular-webfont.eot');
-    src: url('font/genericons-regular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('font/genericons-regular-webfont.woff') format('woff'),
-         url('font/genericons-regular-webfont.ttf') format('truetype'),
-         url('font/genericons-regular-webfont.svg#genericonsregular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
+	font-family: 'Genericons';
+	src: url('font/genericons-regular-webfont.eot');
+	src: url('font/genericons-regular-webfont.eot?#iefix') format('embedded-opentype'),
+		 url('font/genericons-regular-webfont.woff') format('woff'),
+		 url('font/genericons-regular-webfont.ttf') format('truetype'),
+		 url('font/genericons-regular-webfont.svg#genericonsregular') format('svg');
+	font-weight: normal;
+	font-style: normal;
 }
 
 
@@ -682,7 +681,6 @@ a:hover{
 /* =Masthead
 ----------------------------------------------- */
 
-
 #masthead {
 	display: block;
 	clear: both;
@@ -818,44 +816,44 @@ a:hover{
 	clip: inherit;
 }
 .menu-toggle:before {
-    font-family: "genericons";
-    content: '\f419';
-    margin-right: 10px;
+	font-family: "genericons";
+	content: '\f419';
+	margin-right: 10px;
 	font-size: 17px;
 	vertical-align:top;
-  }
+}
 .main-small-navigation .menu {
 	display: none;
 }
 .main-small-navigation{
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 1;
-    border: none;
-    border-radius: 0;
-    display: block;
-    clear: both;
-    width: 100%;
-    padding: 0;
-    margin: 0;
-    background: #464646;
-    text-indent:25px;
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 1;
+	border: none;
+	border-radius: 0;
+	display: block;
+	clear: both;
+	width: 100%;
+	padding: 0;
+	margin: 0;
+	background: #464646;
+	text-indent:25px;
 }
 .admin-bar .main-small-navigation{
-    position: absolute;
-    top: 40px;
-    left: 0;
-    z-index: 1;
-    border: none;
-    border-radius: 0;
-    display: block;
-    clear: both;
-    width: 100%;
-    padding: 0;
-    margin: 0;
-    background: #464646;
-    text-indent:25px;
+	position: absolute;
+	top: 40px;
+	left: 0;
+	z-index: 1;
+	border: none;
+	border-radius: 0;
+	display: block;
+	clear: both;
+	width: 100%;
+	padding: 0;
+	margin: 0;
+	background: #464646;
+	text-indent:25px;
 }
 .demosite-activate-wrap .main-small-navigation{
 	top: 80px;
@@ -871,17 +869,17 @@ a:hover{
 	border:none;
 }
 .main-small-navigation ul ul{
-    background-color: transparent;
-    background-image: none;
-    display: inherit;
-    position: inherit;
-    float: none;
-    padding: inherit;
-    margin-left: 10px;
-    border: none;
-    top: inherit;
-    left: inherit;
-    box-shadow: none;
+	background-color: transparent;
+	background-image: none;
+	display: inherit;
+	position: inherit;
+	float: none;
+	padding: inherit;
+	margin-left: 10px;
+	border: none;
+	top: inherit;
+	left: inherit;
+	box-shadow: none;
 }
 .main-small-navigation ul li{
 	list-style-type:none;
@@ -1046,12 +1044,12 @@ footer.entry-meta {
 	background:#f5f5f5;
 	border:1px solid #ddd;
 	border-radius: 4px;
-    color: #333;
-    cursor: pointer;
-    display: inline-block;
+	color: #333;
+	cursor: pointer;
+	display: inline-block;
 	line-height: 1.3;
-    padding: 0.02em 0.5em;
-    text-align: center;
+	padding: 0.02em 0.5em;
+	text-align: center;
 }
 .page-links a:hover {
 	opacity: 0.8;
@@ -1221,6 +1219,7 @@ img.size-full,
 	-moz-border-radius: 500px;
 	border-radius: 500px;
 }
+
 /* Make sure embeds and iframes fit their containers */
 embed,
 iframe,
@@ -1336,7 +1335,6 @@ ol.commentlist {
 	-webkit-box-shadow: #FFF 0 1px 0 0;
 	box-shadow: #FFF 0 1px 0 0;
 }
-
 .widget h1, .grofile h4 {
 	font-weight: 500;
 	margin: 0 0 10px;
@@ -1424,7 +1422,6 @@ ol.commentlist {
 	font-weight:bold;
 	display:block;
 }
-
 
 /* Menu & Categories Widgets (With Sub-Items) */
 .widget-area .sub-menu,
@@ -1518,8 +1515,8 @@ td.recentcommentsavatartop {
 .widget_recent_comments td.recentcommentstexttop,
 .widget_recent_comments td.recentcommentstextend {
 	padding: 1em 0.615em 1.1em !important;
-    vertical-align: top;
-    border-bottom:0!important;
+	vertical-align: top;
+	border-bottom:0!important;
 }
 
 
@@ -1528,6 +1525,15 @@ td.recentcommentsavatartop {
 
 .single .entry-content .sharedaddy:last-child, .page .entry-content .sharedaddy:last-child {
 	margin-bottom: 34px;
+}
+
+
+/* =Jetpack: Stats
+----------------------------------------------- */
+
+img#wpstats {
+	display: block;
+	margin: 10px auto;
 }
 
 
@@ -1813,43 +1819,43 @@ td.recentcommentsavatartop {
 @media only screen and (max-width: 767px) {
 #page{
 	position:inherit;
-	padding:0 70px;
+	padding:0 25px;
 }
 .site-title{
 	line-height:1.4;
 }
 .main-small-navigation{
-    position: absolute;
-    top: 0px;
-    left: 0;
-    z-index: 1;
-    border: none;
-    border-radius: 0;
-    display: block;
-    clear: both;
-    width: 100%;
-    padding: 0;
-    margin: 0;
-    background: #464646;
-    text-indent:25px;
+	position: absolute;
+	top: 0px;
+	left: 0;
+	z-index: 1;
+	border: none;
+	border-radius: 0;
+	display: block;
+	clear: both;
+	width: 100%;
+	padding: 0;
+	margin: 0;
+	background: #464646;
+	text-indent:25px;
 }
 .admin-bar .main-small-navigation, .demo-site .main-small-navigation{
-    position: absolute;
-    top: 40px;
-    left: 0;
-    z-index: 1;
-    border: none;
-    border-radius: 0;
-    display: block;
-    clear: both;
-    width: 100%;
-    padding: 0;
-    margin: 0;
-    background: #464646;
-    text-indent:25px;
+	position: absolute;
+	top: 40px;
+	left: 0;
+	z-index: 1;
+	border: none;
+	border-radius: 0;
+	display: block;
+	clear: both;
+	width: 100%;
+	padding: 0;
+	margin: 0;
+	background: #464646;
+	text-indent:25px;
 }
 .admin-bar .main-small-navigation{
-    top:27px;
+	top:27px;
 }
 iframe, object, embed {
 	width: auto;
@@ -1875,17 +1881,39 @@ footer.entry-meta {
 .entry-thumbnail img{margin:14px 0;}
 .entry-title,
 .entry-content,
-.entry-summary,
-.entry-meta {
+.entry-summary{
 	margin: 0;
 	padding: 0;
+}
+.entry-meta{
+	margin: 10px 0;
+	padding: 0;
+}
+/* Custom Post Types */
+.format-aside:before,
+.format-video:before,
+.format-audio:before,
+.format-image:before,
+.format-gallery:before,
+.format-link:before,
+.format-quote:before,
+.post.format-standard.sticky:before,
+.entry-content .avatar {
+	display: none;
 }
 }
 
 /* Mobile Landscape Size to Tablet Portrait (devices and browsers) */
 @media only screen and (max-width: 479px) {
-.entry-title a {
-	font-size: 0.8em;
+.site-title a {
+	font-size: .5em;
+}
+.site-description {
+	font-size: 1.3em;
+}
+.entry-title, .entry-title a {
+	font-size: 30px;
+	margin: 0;
 }
 }
 
